--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --config webpack.config.js --mode=development",
+    "start:server": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,14 @@
   "homepage": "https://github.com/Brenterino/pogchamp-online#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "phaser": "^3.15.1",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "babel-loader": "^8.0.4",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
