--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config webpack.config.js --mode=development",
-    "start:server": "webpack-dev-server"
+    "start": "webpack --config webpack.config.js --mode=development --watch"
   },
   "repository": {
     "type": "git",
@@ -30,7 +29,6 @@
     "@babel/core": "^7.2.2",
     "babel-loader": "^8.0.4",
     "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-cli": "^3.1.2"
   }
 }
