--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "pogchamp-online",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "js/server/server.js",
     "scripts": {
-        "start": "webpack --config webpack.config.js --mode=development --watch"
+        "server": "node js/server/server.js",
+        "client": "webpack --config webpack.config.js --mode=development --watch"
     },
     "repository": {
         "type": "git",
